# CPP-Kurs

./: .gitignore  README.md
BurningKiddies/: CMakeLists.txt  readme.md
BurningKiddies/include/: BurnEngine.h  Level.h  Player.h
BurningKiddies/src/: BurnEngine.cpp  Level.cpp  Player.cpp  main.cpp
Game/: CMakeLists.txt  Entity.cpp  Entity.h  Input.cpp  Room.cpp  Texture.cpp  Texture.h  Tile.cpp  Tile.h  Window.cpp  Window.h  logging.cpp  logging.h  main.cpp
Game/include/: Entity.h  Input.h  Room.h  Texture.h  Tile.h  Window.h  stdafx.h
KlassenTutorial/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
PacmanClone/: CMakeLists.txt
PacmanClone/include/: Direction.h  Entity.h  LevelMap.h  Tile.h  Window.h  stdafx.h
PacmanClone/levels/: default.lvl
Playground/: CMakeLists.txt  README.txt  main.cpp
Playground/include/: BackgroundMusic.h  Camera.h  Entity.h  Input.h  MenuFactory.h  Rectangle.h  SoundSystem.h  Texture.h  Tile.h  World.h
Playground/include/entities/: Button.h  Player.h
Playground/include/state/: Worlds.h
Playground/src/: BackgroundMusic.cpp  Camera.cpp  Entity.cpp  Input.cpp  MenuFactory.cpp  Rectangle.cpp  SoundSystem.cpp  Texture.cpp  Tile.cpp  World.cpp
Playground/src/entities/: Button.cpp  Player.cpp
Punktefresser/: CMakeLists.txt  Direction.cpp  Entity.cpp  LevelMap.cpp  Texture.cpp  Timer.cpp  main.cpp
Punktefresser/entities/: Enemy.cpp  MovableEntity.cpp  Pacman.cpp  Pacman.cpp.cpp  StaticEntity.cpp
Punktefresser/include/: Direction.h  Entity.h  Input.h  LevelMap.h  Texture.h  Tile.h  Window.h  stdafx.h
Punktefresser/include/entities/: Enemy.h  MovableEntity.h  Pacman.h  StaticEntity.h
Punktefresser/levels/: default.lvl
Punktefresser/src/: Entity.cpp  Texture.cpp  Tile.cpp  Window.cpp  main.cpp
Sidescroller/: LICENCES
Sidescroller/assets/images/objects/: hitboxes.txt
Sidescroller/include/: Camera.h  Entity.h  GlobalSettings.h  Input.h  Rectangle.h  Texture.h  Tile.h  World.h
Sidescroller/include/entities/: Button.h  Player.h  SimpleEntity.h
Sidescroller/src/: Camera.cpp  Entity.cpp  Input.cpp  MenuFactory.cpp  Rectangle.cpp  SoundSystem.cpp  Texture.cpp  Tile.cpp  World.cpp
SpaceGame/: CMakeLists.txt  Input.cpp  Window.cpp  logging.cpp
SpaceGame/include/: Tile.h  Window.h
SpaceShipRace/: CMakeLists.txt  Texture.cpp  main.cpp
SpaceShipRace/include/: Texture.h  Timer.h  logging.h  stdafx.h
Tutorial/: CMakeLists.txt  DiceGames.cpp  DiceGames.h  Room.cpp  Room.h  TextAdventure.cpp  TextAdventure.h  main.cpp
